#python -m build --wheel
#使用以下命令安装whl文件：python -m pip install 文件名.whl
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minibt"
version = "1.0.2"
description = "一站式量化交易策略开发库，简化从策略搭建到实盘交易的全流程"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "owen", email = "407841129@qq.com" }
]
urls = { Homepage = "https://github.com/MiniBtMaster/minibt" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
    # 基础数据处理库
    "numpy>=1.21.0,<1.26.0",
    "pandas>=1.4.0,<2.4.0",
    "pandas-ta>=0.3.14b0",
    "numpy-ext>=0.9.9",
    # 量化指标与分析库
    "TA-Lib>=0.4.24",
    "finta>=1.3",
    "quantstats>=0.0.62",
    "statsmodels>=0.13.5",
    "scipy>=1.7.0,<1.13.2",
    "arch>=7.2.0",
    "pykalman>=0.10.1",
    "tulipy>=0.4.0",
    # 策略框架与实盘对接
    "tqsdk>=3.4.10",
    "tqsdk-ctpse>=1.0.2",
    "tqsdk-sm>=1.0.5",
    # 可视化与交互库
    "bokeh>=3.3.0",
    "pyqt5>=5.15.4",
    "PyQt-Fluent-Widgets>=1.6.6",
    "PyQt5-Frameless-Window>=0.4.3",
    "PyQtWebEngine>=5.15.6",
    # 工具与辅助库
    "addict>=2.4.0",
    "cachetools>=5.3.0",
    "retrying>=1.3.4",
    "psutil>=5.9.4",
    "iteration-utilities>=0.11.0",
    "joblib>=1.2.0",
    "colorlog>=6.7.0",
    "typing-extensions>=4.12.2",
    # 参数优化与强化学习
    "optuna>=3.4.0",
    "deap>=1.4.1",
    "torch>=1.13.1",
    "torchcontrib>=0.0.2",
    "ElegantRL>=0.3.10"
]

[tool.setuptools]
# 包直接在根目录，不需要指定 package-dir
packages = { find = { where = ["."], include = ["minibt", "minibt.*"] } }
package-data = { "minibt" = ["**/*"] }

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }