#python -m build --wheel
#使用以下命令安装whl文件：python -m pip install 文件名.whl
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minibt"
version = "1.2.4"
description = "一站式量化交易策略开发库，简化从策略搭建到实盘交易的全流程"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "owen", email = "407841129@qq.com" }
]
urls = {Homepage = "https://github.com/MiniBtMaster/minibt",Documentation = "https://www.minibt.cn/"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
    # 基础数据处理库
    "numpy>=2.2.6",         # Python 3.12+ 需要 1.26+
    "pandas>=2.2.0,<=2.3.3", # Python 3.12+ 需要 >=2.2，锁定 2.x 避免 3.0 破坏性变更
    "pandas-ta>=0.3.14b0",   # 指标计算
    # 量化指标与分析库
    "TA-Lib>=0.4.24",
    "finta>=1.3",
    "quantstats>=0.0.62",
    "statsmodels>=0.13.5",
    "scipy>=1.7.0",
    "arch>=7.2.0",
    "pykalman>=0.10.1",
    "tulipy>=0.4.0",
    # 策略框架与实盘对接
    "tqsdk>=3.4.10",
    "tqsdk-ctpse>=1.0.2",
    "tqsdk-sm>=1.0.5",
    # 可视化与交互库
    "bokeh>=3.3.0",
    "rich>=13.0.0",
    "PySide6>=6.4.0",
    "PySide6-Fluent-Widgets>=1.11.1",
    "lightweight_charts>=1.0.0",
    # 工具与辅助库
    "addict>=2.4.0",
    "cachetools>=5.3.0",
    "retrying>=1.3.4",
    "psutil>=5.9.4",
    "iteration-utilities>=0.11.0",
    "joblib>=1.2.0",
    "colorlog>=6.7.0",
    "typing-extensions>=4.12.2",
    # 参数优化与强化学习
    "optuna>=3.4.0",
    "deap>=1.4.1",
    "torch>=1.13.1",
    "torchcontrib>=0.0.2"
    # "ElegantRL>=0.3.10"  # 保持注释，按需启用
]

[tool.setuptools]
# 包直接在根目录，不需要指定 package-dir
packages = { find = { where = ["."], include = ["minibt", "minibt.*"] } }
package-data = { "minibt" = ["**/*"] }
include-package-data = true

#[tool.setuptools.dynamic]
#readme = { file = "README.md", content-type = "text/markdown" }